# atomspace

./: .gitignore  .travis.yml  CMakeLists.txt  Design-Notes-A.md  Design-Notes-B.md  Design-Notes-C.md  Design-Notes-D.md  Design-Notes.md  LICENSE  README.md  TODO  circle.yml  jenkins_job_config.xml  opencog.spec  pyproject.toml
cmake/: CMakeLists.txt  OpenCogAtomTypes.cmake  OpenCogCython.cmake  OpenCogFunctions.cmake  OpenCogGenCppTypes.cmake  OpenCogGenCxxTypes.cmake  OpenCogGenOCamlTypes.cmake  OpenCogGenPythonTypes.cmake  OpenCogGenScmTypes.cmake  OpenCogGenTypes.cmake  OpenCogGenWrapper.cmake  OpenCogGuile.cmake  OpenCogMacros.cmake  OpenCogOCaml.cmake  cython-wrapper.sh
examples/c++/: CMakeLists.txt  README.md  basic.cc
examples/c++-api/: AtomSpaceEventSubscribeExample.cc  CMakeLists.txt  CRUDExample.cc  README.md  UREExample.cc
examples/c++-guile/: CMakeLists.txt  ExampleSCM.cc  ExampleSCM.h  PrimitiveExample.cc  README.md  run-example.scm
lib/: AtomSpaceConfig.cmake.in  CMakeLists.txt  FindCabal.cmake  FindCython.cmake  FindGHC.cmake  FindGuile.cmake  FindLibGearman.cmake  FindPGSQL.cmake  FindPython3Interp.cmake  FindStack.cmake  FindZMQ.cmake  OpenCogAtomTypes.cmake  OpenCogFunctions.cmake  OpenCogMacros.cmake  README  README.md  atomspace.pc.in  dummy.cc  helgrind.guile.suppressions  valgrind.guile.suppressions  valgrind.link-grammar.suppressions  valgrind.logger.suppressions  valgrind.python.suppressions
opencog/: CMakeLists.txt  README  README.md
opencog/analysis/: CMakeLists.txt  README.md  analysis.scm  bin-count.scm  compute-mi.scm  cosine.scm  entropy.scm  filter.scm  fold-api.scm  mst-parser.scm  object-api.scm  power-iter.scm  report-api.scm  support.scm  thresh-pca.scm
opencog/atoms/: CMakeLists.txt  NumberNode.h  README.md  TypeNode.h
opencog/atomspace/: Atom.cc  Atom.h  AtomSpace.cc  AtomSpace.h  AtomSpaceComms.cc  AtomSpaceComms.h  AtomSpaceInit.cc  AtomTable.cc  AtomTable.h  AttentionBank.cc  AttentionBank.h  AttentionValue.h  BackingStore.cc  BackingStore.h  CMakeLists.txt  ClassServer.h  CountTruthValue.cc  CountTruthValue.h  FixedIntegerIndex.cc  FixedIntegerIndex.h  FloatValue.cc  FloatValue.h  Frame.cc  Frame.h  FuzzyTruthValue.cc  FuzzyTruthValue.h  GenericTruthValue.cc  GenericTruthValue.h  Handle.cc  Handle.h  HandleSeqIndex.h  HandleSetIndex.h  ImportanceIndex.cc  ImportanceIndex.h  IncomeIndex.cc  IncomeIndex.h  IncomingIndex.cc  IncomingIndex.h  IndefiniteTruthValue.cc  IndefiniteTruthValue.h  (+36 more)
opencog/atomspaceutils/: AtomSpaceUtils.cc  AtomSpaceUtils.h  CMakeLists.txt  FuzzyMatch.cc  FuzzyMatch.h  README.md  RandomAtomGenerator.cc  RandomAtomGenerator.h  TLB.cc  TLB.h
opencog/atomutils/: AtomUtils.cc  AtomUtils.h  CMakeLists.txt  FindUtils.cc  FindUtils.h  FollowLink.h  ForeachChaseLink.h  ForeachZip.h  FuzzyMatch.cc  FuzzyMatch.h  FuzzyMatchBasic.cc  FuzzyMatchBasic.h  HandleMap.h  Neighbors.cc  Neighbors.h  README  README.md  Substitutor.h  ThreadSafeHandleMap.h  TypeUtils.cc  TypeUtils.h  Unify.cc  Unify.h
opencog/attentionbank/: AttentionSCM.cc  AttentionSCM.h
opencog/bench-mst/: README.md  boruvka.gplot  mst-bench.scm
opencog/benchmark/: AtomSpaceBenchmark.cc  AtomSpaceBenchmark.h  CMakeLists.txt  PagedAtoms.cc  PagedAtoms.h  README  README.md  atom_bench.cc  atomspace_bm.cc  benchmark.py  diary.txt  profile_bindlink.cc  python_diary.txt
opencog/cython/: CMakeLists.txt  CythonUtils.cc  CythonUtils.h  PyGILGuard.h  PyIncludeWrapper.h  PythonError.cc  PythonEval.cc  PythonEval.h  PythonLoader.cc  PythonSCM.cc  README.md  load-file.cc  load-file.h
opencog/eval/: CMakeLists.txt  EvaluatorPool.h  FrameStack.cc  FrameStack.h  GenericASEval.cc  GenericASEval.h  GenericEval.h
opencog/guile/: CMakeLists.txt  LoggerSCM.cc  LoggerSCM.h  PrimitiveExample.cc  README  README.md  RandGenSCM.cc  SchemeEval.cc  SchemeEval.h  SchemeExec.cc  SchemeModule.cc  SchemeModule.h  SchemePrimitive.cc  SchemePrimitive.h  SchemeSmob.cc  SchemeSmob.h  SchemeSmobAF.cc  SchemeSmobAS.cc  SchemeSmobAV.cc  SchemeSmobAtom.cc  SchemeSmobDV.cc  SchemeSmobGC.cc  SchemeSmobLogger.cc  SchemeSmobNew.cc  SchemeSmobPrint.cc  SchemeSmobTV.cc  SchemeSmobValue.cc  load-file.cc
opencog/haskell/: .gitignore  AtomSpace_CWrapper.cpp  AtomSpace_CWrapper.h  CMakeLists.txt  CheckEnv.cmake  Exec_CWrapper.cpp  Exec_CWrapper.h  InstallLib.cmake  Makefile  PatternMatcher_CWrapper.cpp  PatternMatcher_CWrapper.h  README.md  TruthValue_CWrapper.cpp  TruthValue_CWrapper.h  Utils_CWrapper.cpp  Utils_CWrapper.h  Value_CWrapper.cpp  Value_CWrapper.h  build.sh  example.hs  opencog-atomspace.cabal  setupghci.cmake  stack.yaml
opencog/matrix/: CMakeLists.txt  README.md  atom-cache.scm  bin-count.scm  compute-mi.scm  concatenate.scm  cosine-api.scm  cosine.scm  count-api.scm  direct-sum.scm  dynamic.scm  edge-pairs  edge-pairs.scm  ensemble.scm  entropy.scm  eval-pairs.scm  filter.scm  fold-api.scm  frequency.scm  futures.scm  group-similarity.scm  loop-api.scm  matrix.scm  mst-parser.scm  object-api.scm  ortho-ensemble.scm  progress.scm  report-api.scm  similarity-api.scm  store.scm  support.scm  symmetric-mi.scm  thresh-pca.scm  trans-batch.scm  transpose.scm  trim.scm
opencog/network/: CMakeLists.txt  README.md  make-disjuncts.scm  make-section.scm  mst-parser.scm  network.scm
opencog/object-atomese/: README.md
opencog/ocaml/: CMakeLists.txt  CamlWrap.cc  CamlWrap.h  META  README.md  atomese.ml  atomese.mli  atomspace.ml
opencog/opencl/: CMakeLists.txt  Design.md  README.md  scaffolding.cc
opencog/persist/: CMakeLists.txt  README  README.md
opencog/python/: Authors.txt  CMakeLists.txt  README.md
opencog/query/: AttentionalFocusCB.cc  AttentionalFocusCB.h  BindLinkAPI.h  CMakeLists.txt  Composition.cc  ConstraintDomain.cc  ConstraintDomain.h  ContinuationMixin.cc  ContinuationMixin.h  DefaultImplicator.cc  DefaultImplicator.h  DefaultPatternMatchCB.cc  DefaultPatternMatchCB.h  FuzzyPatternMatch.cc  FuzzyPatternMatch.h  Implicator.cc  Implicator.h  ImplicatorMixin.cc  ImplicatorMixin.h  InitiateSearchCB.cc  InitiateSearchCB.h  Pattern.h  (+37 more)
tests/: CMakeLists.txt
(+2709 files in other folders)
